# A2A-Protocol-Sample

./: .env.example  .gitignore  README.md  package-lock.json  package.json  tsconfig.json
clients/: adk.yaml  pyproject.toml
clients/src/: __init__.py  find_providers_agent.py  healthcare_concierge_agent.py  healthcare_concierge_agent_a2a_server.py  policy_research_agent.py
pythonA2A/: .env.example  README.md  adk.yaml  pyproject.toml
pythonA2A/src/clients/: __init__.py  heatlhcare_concierge_a2a_client.py
pythonA2A/src/servers/: healthcare_concierge_a2a_agent.py  healthcare_concierge_agentstack.py  logger.py  run_agentstack.py  run_all_agentstack.py
pythonA2A/src/servers/agentstack/: find_providers_a2a.py  policy_a2a.py  research_a2a.py
pythonAdk/: adk.yaml  pyproject.toml
pythonAdk/agent/: __init__.py  policy_and_research_agent.py
servers/: .env.example  package-lock.json  package.json
servers/src/: a2aClientsTester.ts
servers/src/a2aServer/: findProvidersAgent.ts  index.ts  policyAgent.ts  researchAgent.ts
servers/src/utils/: logger.ts
src/: a2aClient.ts  index.ts  logger.ts  multiServerMCPClient.ts  policyAgent.ts  remoteA2AClientAgent.ts  sequentialAgents.ts
src/a2a/: policyAgentTaskExecutor.ts
src/a2aServer/: policyAgent.ts  researchAgent.ts  utils.ts
src/mcpServer/: doctor.d.ts  findDoctors.ts
tsServers/: .env.example  package-lock.json  package.json
tsServers/data/: doctors.json
tsServers/src/a2aServer/: findProvidersAgent.ts  policyAgent.ts  researchAgent.ts
tsServers/src/mcpServer/: findDoctors.ts
(+1 files in other folders)
